--- a/style.css
+++ b/style.css
@@ -307,9 +307,9 @@ body{
             width: 300px;
             
             /* Posicionamento corrigido */
-            top: 29%;;
-            right: 10%;
-            nav-down: 20%; 
+            top: 40%;
+            right: 15%;
+            nav-down: 10%; 
  
 
             
